Safari (WebKit) doesn't wrap element within flex when width comes below min-width https://bugs.webkit.org/show_bug.cgi?id=136041 <rdar://problem/25569370>

Reviewed by Darin Adler.

Source/WebCore:

While figuring out whether a particular flex item fits the current line, we need to take
the min-width into account too. This matches both FF and Chrome behaviour.

Tests: fast/flexbox/flex-wrap-when-min-widht-is-set-1.html
       fast/flexbox/flex-wrap-when-min-widht-is-set-2.html

* rendering/RenderFlexibleBox.cpp:
(WebCore::RenderFlexibleBox::computeNextFlexLine):

LayoutTests:

* fast/flexbox/flex-wrap-when-min-widht-is-set-1-expected.html: Added.
* fast/flexbox/flex-wrap-when-min-widht-is-set-1.html: Added.
* fast/flexbox/flex-wrap-when-min-widht-is-set-2-expected.html: Added.
* fast/flexbox/flex-wrap-when-min-widht-is-set-2.html: Added.


Canonical link: https://commits.webkit.org/182758@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@209068 268f45cc-cd09-0410-ab3c-d52691b4dbfc